[FIX] website_blog: remove negative word spacing in blog snippet
Since [1] when the blog layout was refactored between 12.0 and 13.0, a
negative word spacing was introduced in the blog post snippet with the
big pictures layout.

This commit removes this negative word spacing.

[1]: https://github.com/odoo/odoo/commit/bb0cdec4594fab8c22265ed8af0c2d431a263b72

task-2822436

--- a/addons/website_blog/static/src/scss/website_blog.scss
+++ b/addons/website_blog/static/src/scss/website_blog.scss
@@ -438,7 +438,6 @@ $o-wblog-title-sizes-variants: (
         .s_latest_posts_post_title  {
             @include font-size($h3-font-size);
             margin-bottom: 0.5em;
-            word-spacing: -0.15em;
         }
 
         @include s-latest-posts-figure-hook;
